# Software-Testing-Mini-Projects

Final-Mini-Project/final-Drdavee32-master/: Makefile  reverse.cpp  reverse.hpp  test_reverse.cpp
Mini-Project-Palindrome/: Makefile  palindrome.cpp  palindrome.hpp  test_palindrome.cpp
Mocking-Software-Development/: CMakeLists.txt  test_calculator.cpp
Videostore/src/: Customer.cpp  Customer.hpp  Movie.cpp  Movie.hpp  Rental.cpp  Rental.hpp
statement-coverage/: Makefile  coverage.cpp  coverage.md  coverage_handler.hpp  string.cpp  test_concat.cpp  test_cstring_ctor.cpp  test_equality.cpp
test-driven-development/test-driven-development/: CMakeLists.txt  fizzbuzz.cpp  fizzbuzz.hpp  test_fizzbuzz.cpp
